--- a/package.json
+++ b/package.json
@@ -6,11 +6,15 @@
     "@testing-library/jest-dom": "^5.17.0",
     "@testing-library/react": "^13.4.0",
     "@testing-library/user-event": "^13.5.0",
+    "canvas-confetti": "^1.9.3",
     "react": "^18.3.1",
+    "react-confetti": "^6.1.0",
+    "react-custom-roulette": "^1.4.1",
     "react-dom": "^18.3.1",
     "react-icons": "^5.3.0",
     "react-scripts": "5.0.1",
     "scrollreveal": "^4.0.9",
+    "spin-wheel-game": "^1.0.3-alpha.3",
     "swiper": "^11.1.14",
     "web-vitals": "^2.1.4"
   },
